--- a/NewsApp/NewsScreen/NewsViewController.xib
+++ b/NewsApp/NewsScreen/NewsViewController.xib
@@ -25,7 +25,7 @@
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemPinkColor"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="jBx-kR-4hT" secondAttribute="bottom" id="JCP-bV-BnA"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jBx-kR-4hT" secondAttribute="trailing" id="f76-Rk-FNq"/>
@@ -38,9 +38,6 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
